Added more features for Users
